Project refactoring and MVP smoke runs back+DB+Rabbit+utills